--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 
-VITE_BACKEND_URL="https://api.openweathermap.org/data/2.5/weather?units=metric&q=delhi&appid=4c3fb3dc336e3f3a2ccfc656bf857318"
+VITE_BACKEND_URL1="https://api.openweathermap.org/data/2.5/weather?units=metric&q=delhi&appid=4c3fb3dc336e3f3a2ccfc656bf857318"
+VITE_BACKEND_URL2="https://weatherapi-mnsc.onrender.com/api/mylocation"
